typescript/checker/tests/conformance/statements/for-ofStatements/ES5For-of12.ts.stderr
error: Cannot assign to this
 --> $DIR/tests/conformance/statements/for-ofStatements/ES5For-of12.ts:1:7
  |
1 | for ([""] of [[""]]) { }
  |       ^^

